# PacketParamedic

./: .dockerignore  .env.example  .gitignore  AI_PDLC.md  BUYERS_GUIDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TESTING.md  deploy_fix.sh  deploy_prep.sh  deployment_report.md  dev_plan.md  history.md  packetparamedic.service  personas.md  report.json  roadmap.md
.github/workflows/: pi5-ci.yml
config/: schedules.toml
docs/: ACCELERATION_STRATEGY.md  BLAME_ANALYSIS_TEMPLATE.md  CI_SETUP.md  HARDWARE_OPTIMIZATION.md  SIMULATION_PLAN.md  SIMULATION_REPORT.md
docs/reports/: 2026-02-12-Full-Fat-Validation.md  2026-02-12-Severe-Congestion-Incident.md  2026-02-12_23-43-08_Reflector_Validation.md  2026-02-12_persona_simulation_report.md  2026-02-13_08-00-29_Reflector_Validation.md  2026-02-13_08-23-00_Reflector_Final_Validation.md  2026-02-13_13-46-10_Report_Trace_Wifi_Validation.md  2026-02-13_14-04-00_Full_Blame_Report.md  2026-02-13_Comprehensive_Reflector_Validation.md  2026-02-13_Report_Comprehensive_Suite.md  2026-02-13_Report_MVP_Reflector_All.md  2026-02-13_Report_Trace_Wifi_Validation.md
docs/specs/: SELF_HOSTED_ENDPOINT_SPEC.md
docs/troubleshooting/: IRWW_Link_Bottleneck_Analysis.md
fixtures/iperf3/: 100g-tcp.json  100g-udp.json  10g-tcp.json  10g-udp.json  1g-tcp.json  1g-udp.json  2.5g-tcp.json  2.5g-udp.json  250m-tcp.json  250m-udp.json  40g-tcp.json  40g-udp.json  500m-tcp.json  500m-udp.json  5g-tcp.json  5g-udp.json  README.md
reflector/: Cargo.toml  Containerfile  Containerfile.local  README.md  ROADMAP.md  SIMULATION.md  TESTING.md  local.config.toml
reflector/debian/: build-deb.sh  postinst  prerm
reflector/deploy/: DEPLOY.md  docker-compose.yml  reflector.toml.example
reflector/deploy/k8s/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
reflector/quadlet/: reflector.container  reflector.volume
reflector/rpm/: build-rpm.sh  reflector.spec
reflector/src/: audit.rs  auth.rs  cert.rs  config.rs  governance.rs  identity.rs  main.rs  network.rs  peer.rs  rpc.rs  selftest.rs  server.rs  session.rs  tls.rs  wire.rs
reflector/src/engine/: health.rs  mod.rs  path_meta.rs  throughput.rs  udp_echo.rs
reflector/systemd/: reflector.service
src/: lib.rs  main.rs
src/accel/: cpu.rs  gles.rs  manager.rs  mod.rs  neon.rs  ops.rs  vulkan.rs
src/analysis/: aggregator.rs  correlation.rs  mod.rs  model.rs  qos.rs  runner.rs  stats.rs
src/api/: mod.rs  routes.rs  state.rs
src/detect/: anomaly.rs  engine.rs  incident.rs  mod.rs
src/evidence/: mod.rs
src/probes/: dns.rs  http.rs  icmp.rs  mod.rs  tcp.rs  trace.rs  wifi.rs
src/reflector_proto/: cert.rs  client.rs  identity.rs  mod.rs  rpc.rs  wire.rs
src/scheduler/: cron.rs  engine.rs  history.rs  mod.rs  profiles.rs  queue.rs
src/selftest/: hardware.rs  mod.rs  network.rs  thermal.rs  wifi.rs
src/storage/: mod.rs  schema.rs  spool.rs
src/system/: disk.rs  mod.rs  network.rs  ntp.rs
src/throughput/: iperf.rs  lan.rs  mod.rs  native.rs  report.rs  wan.rs
src/throughput/provider/: fast.rs  mod.rs  ndt7.rs  ookla.rs  reflector.rs
systemd/: packetparamedic-tmpfiles.conf  packetparamedic-updater.service  packetparamedic.service
systemd/journald.conf.d/: packetparamedic-retention.conf
tests/: persona_simulation.rs  smoke.rs  trace_tests.rs  validate_deployment.py
tools/: Dockerfile.build  build-container.sh  build-deb.sh  ci-local.sh  setup-runner.sh  setup_prereqs.sh
tools/blame-trainer/: blame_lr.json  go.mod
tools/blame-trainer/cmd/predict_blame/: main.go
tools/blame-trainer/cmd/train_blame/: main.go
