[package]
name = "packetparamedic"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Appliance-grade network diagnostics for Raspberry Pi 5"
license = "BlueOak-1.0.0"
repository = "https://github.com/ParkWardRR/PacketParamedic"
readme = "README.md"
keywords = ["network", "diagnostics", "raspberry-pi", "10gbe", "appliance"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "packetparamedic"
path = "src/main.rs"

[lib]
name = "packetparamedic"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }
cron = "0.13"

# HTTP client (for probes and speed tests)
reqwest = { version = "0.12", features = ["json"] }

# DNS
trust-dns-resolver = "0.23"

# UUID for request/incident IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Template rendering
askama = "0.12"
rand = "0.8"
glutin = { version = "0.32.3", features = ["egl"] }
glow = "0.16.0"
ash = "0.38.0"
async-trait = "0.1.89"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25"
rcgen = "0.14.7"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
rustls = { version = "0.23.36", features = ["ring"] }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.18", features = ["codec"] }
bytes = "1.11.1"
base32 = "0.5.1"
x509-parser = "0.18.1"
rustls-pki-types = "1.14.0"
futures = "0.3"
time = { version = "0.3", features = ["serde", "formatting"] }
zeroize = "1.8.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

# Enable NEON auto-vectorization on Cortex-A76
[profile.release.build-override]
opt-level = 3
