[package]
name = "reflector"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "PacketParamedic Reflector - Self-hosted network test endpoint"
license = "BlueOak-1.0.0"

[[bin]]
name = "reflector"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pki-types = "1"
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["codec"] }
rand = "0.8"
zeroize = "1"
bytes = "1"
base32 = "0.5"
sysinfo = "0.32"
x509-parser = "0.16"
time = "0.3"
libc = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
